style: 💄 fixing alignment (#29)

--- a/src/components/FilterBar/styles.module.scss
+++ b/src/components/FilterBar/styles.module.scss
@@ -14,7 +14,6 @@
   justify-content: space-between;
   margin-bottom: 32px;
   gap: 1rem;
-  width: 100%;
   align-self: flex-end;
 }
 
